# VibeGuard

./: .gitignore  README.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/vibeguard-ai/: Cargo.toml
crates/vibeguard-auth/: Cargo.toml
crates/vibeguard-cache/: Cargo.toml
crates/vibeguard-cli/: Cargo.toml
crates/vibeguard-config/: Cargo.toml
crates/vibeguard-context/: Cargo.toml
crates/vibeguard-deps/: Cargo.toml
crates/vibeguard-git/: Cargo.toml
crates/vibeguard-planner/: Cargo.toml
crates/vibeguard-plugin-sdk/: Cargo.toml
crates/vibeguard-prompt/: Cargo.toml
crates/vibeguard-report/: Cargo.toml
crates/vibeguard-repository/: Cargo.toml
crates/vibeguard-risk/: Cargo.toml
crates/vibeguard-runner/: Cargo.toml
crates/vibeguard-scanner/: Cargo.toml
crates/vibeguard-secrets/: Cargo.toml
crates/vibeguard-verifier/: Cargo.toml
tests/: test_cli_global.py  test_cli_mvp_flow.py  test_llm.py  test_packaging.py
vibeguard/: __init__.py  cli.py  llm.py
vibeguard/ui/: banner.py
