[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vibegaurd-cli"
version = "0.1.0"
description = "Guardrails for vibe-coded software."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Sarthak Tripathy", email = "sarthaktripathy2004@gmail.com" }
]
keywords = [
  "vibe coding",
  "ai coding",
  "developer tools",
  "cli",
  "prompt engineering",
  "code review",
  "security",
  "guardrails"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2",
  "jinja2>=3.1",
  "pyyaml>=6",
  "pathspec>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "build>=1.2",
  "twine>=5"
]

[project.urls]
Homepage = "https://github.com/Sarthak702-droid/VibeGaurd"
Repository = "https://github.com/Sarthak702-droid/VibeGaurd"
Issues = "https://github.com/Sarthak702-droid/VibeGaurd/issues"

[project.scripts]
vibeguard = "vibeguard.cli:app"
vbg = "vibeguard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vibeguard"]

[tool.hatch.build.targets.sdist]
include = [
  "vibeguard",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "build>=1.2",
  "twine>=5"
]

[project.urls]
Homepage = "https://github.com/Sarthak702-droid/VibeGaurd"
Repository = "https://github.com/Sarthak702-droid/VibeGaurd"
Issues = "https://github.com/Sarthak702-droid/VibeGaurd/issues"

[project.scripts]
vibeguard = "vibeguard.cli:app"
vbg = "vibeguard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vibeguard"]

[tool.hatch.build.targets.sdist]
include = [
  "vibeguard",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
