[package]
name = "vibeguard-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
fs2.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
vibeguard-core = { path = "../vibeguard-core", version = "0.3.0" }
