[package]
name = "vibeguard-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "VibeGuard local-first guardrail CLI"

[[bin]]
name = "vibeguard"
path = "src/bin/vibeguard.rs"

[[bin]]
name = "vbg"
path = "src/bin/vbg.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
toml.workspace = true
vibeguard-ai = { path = "../vibeguard-ai", version = "0.3.0" }
vibeguard-auth = { path = "../vibeguard-auth", version = "0.3.0" }
vibeguard-cache = { path = "../vibeguard-cache", version = "0.3.0" }
vibeguard-config = { path = "../vibeguard-config", version = "0.3.0" }
vibeguard-context = { path = "../vibeguard-context", version = "0.3.0" }
vibeguard-core = { path = "../vibeguard-core", version = "0.3.0" }
vibeguard-deps = { path = "../vibeguard-deps", version = "0.3.0" }
vibeguard-git = { path = "../vibeguard-git", version = "0.3.0" }
vibeguard-planner = { path = "../vibeguard-planner", version = "0.3.0" }
vibeguard-prompt = { path = "../vibeguard-prompt", version = "0.3.0" }
vibeguard-report = { path = "../vibeguard-report", version = "0.3.0" }
vibeguard-repository = { path = "../vibeguard-repository", version = "0.3.0" }
vibeguard-risk = { path = "../vibeguard-risk", version = "0.3.0" }
vibeguard-runner = { path = "../vibeguard-runner", version = "0.3.0" }
vibeguard-scanner = { path = "../vibeguard-scanner", version = "0.3.0" }
vibeguard-secrets = { path = "../vibeguard-secrets", version = "0.3.0" }
vibeguard-verifier = { path = "../vibeguard-verifier", version = "0.3.0" }
