[package]
name = "vibeguard-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
vibeguard-core = { path = "../vibeguard-core", version = "0.3.0" }
vibeguard-repository = { path = "../vibeguard-repository", version = "0.3.0" }
