[package]
name = "vibeguard-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
vibeguard-core = { path = "../vibeguard-core", version = "0.3.0" }
vibeguard-git = { path = "../vibeguard-git", version = "0.3.0" }
